# flix

./: .eslintrc.js  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  main.ts  reset.css  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/flix_data/: Cargo.toml
src-tauri/flix_data/src/: card.rs  db.rs  deck.rs  diary_page.rs  lib.rs  local_data.rs  note.rs
src-tauri/flix_utils/: Cargo.toml
src-tauri/flix_utils/src/: lib.rs
src-tauri/flix_utils/src/flix_adapters/: anki.rs  card_format.rs  mod.rs
src-tauri/flix_utils/src/flix_adapters/anki/: anki_db.rs  mod.rs
src-tauri/flix_utils/src/handlers/: deck.rs  mod.rs  note.rs  workspace.rs
src-tauri/icons/: icon.icns
src-tauri/src/: handlers.rs  main.rs
src/components/: accordion.vue  markdown-editor.vue  menu-context.vue  notification.vue
src/components/icons/: alert.vue  arrow.vue  book.vue  cards.vue  check.vue  chevron.vue  close.vue  edit.vue  error.vue  index.ts  info.vue  read.vue
src/components/inputs/: index.ts  input-file.vue  input-focused.vue
src/components/modals/: index.ts  modal-form.vue  modal.vue
src/directives/: index.ts
src/hooks/: index.ts  input.ts  menu-context.ts
src/pages/: home.vue  index.ts  study-area.vue
src/pages/components/: create-deck-form.vue
src/pages/home/: deck-section.vue  home.vue  markdown.module.css  provider.ts  (+5 more)
src/state/: index.ts  notifications.ts
src/types/: index.ts
src/utils/: card-format.ts  dom.ts  index.ts
(+8 files in other folders)
